--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,6 +1,6 @@
 .header{
-  color: #000;
-  background:#CDB0AA  ;//linear-gradient(-45deg, rgba(56,176,179,1) 0%, rgba(182,179,126,1) 19%, rgba(203,140,56,1) 42%, rgba(196,87,28,1) 66%, rgba(204,22,65,1) 86%, rgba(150,76,130,1) 100%);
+  // color: #000;
+  // background:#b6d8d5  ;//linear-gradient(-45deg, rgba(56,176,179,1) 0%, rgba(182,179,126,1) 19%, rgba(203,140,56,1) 42%, rgba(196,87,28,1) 66%, rgba(204,22,65,1) 86%, rgba(150,76,130,1) 100%);
 	  background-size: 400% 400%;
     animation: gradient 15s ease infinite;
   &__logo{
@@ -10,8 +10,14 @@
     }
   }
   &__content{
-    
     padding: 100px 0;
+    .e-container{
+      width: 66%;
+      background-color: #84b0af;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      border-radius: 5px;
+    }
   }
   @keyframes gradient {
     0% {
@@ -28,9 +34,11 @@
     font-weight: 600;
     font-size: 40px;
     padding-bottom: 20px;
+    text-align: center;
   }
   &__desc{
     font-size: 20px;
     line-height: 30px;
+    text-align: center;
   }
 }
