--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -1,13 +1,22 @@
 .about{
-  padding: 60px 0;
+  padding: 40px 0;
+  border-bottom: 2px solid #c45238;
   &__title{
     margin-bottom: 20px;
   }
   &__desc{
-    font-size: 18px;
+    font-size: 16px;
     line-height: 23px;
     &:not(:last-child){
       margin-bottom: 10px;
+    }
+  }
+  &__img{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    img{
+      width: 90%; 
     }
   }
 }
