--- a/scss/global.scss
+++ b/scss/global.scss
@@ -11,4 +11,8 @@
 @import "modules/_about";
 @import "modules/_terms";
 @import "modules/_reasons";
+@import "modules/_setup";
+@import "modules/_settings";
+@import "modules/_brunch-work";
+@import "modules/_footer";
 
