--- a/scss/global.scss
+++ b/scss/global.scss
@@ -14,5 +14,7 @@
 @import "modules/_setup";
 @import "modules/_settings";
 @import "modules/_brunch-work";
+@import "modules/_base";
+
 @import "modules/_footer";
 
