--- a/scss/modules/_brunch-work.scss
+++ b/scss/modules/_brunch-work.scss
@@ -1,4 +1,6 @@
 .brunch{
+    border-top: 2px solid #c45238;
+    padding: 30px 0;
     &__code-wr{
         padding: 15px 20px;
         border: 1px solid #000;
