--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -3,14 +3,28 @@
     padding:40px 0;
     background-color: #cfcac1;
     h2{
-        font-size: 30px;
+        font-size:25px;
         margin-bottom: 20px;
+        line-height: 1.2;
     }
     ul{
         list-style-type: disc;
         margin-left: 25px;
         li{
             line-height: 1.3;
+            margin-bottom: 10px;
+        }
+    }
+    .copy{
+        margin: 0 auto;
+        display: flex;
+        max-width: 220px;
+        color: #676767;
+        padding-top: 30px;
+        p{
+            &:first-child{
+                margin-right: 10px;
+            }
         }
     }
 }
