--- a/scss/modules/_reasons.scss
+++ b/scss/modules/_reasons.scss
@@ -4,18 +4,19 @@
     margin-bottom: 20px;
   }
   &__text{
-    font-size: 20px;
-    line-height: 25px;
+    font-size: 16px;
+    line-height: 1.3;
     margin-bottom: 15px;
   }
   &__list{
     list-style-type: circle;
     list-style-position: inside;
-    font-size: 20px;
+    font-size: 16px;
     margin-bottom: 15px;
+    width: 90%;
   }
   &__list-item{
     margin-bottom: 10px;
-    line-height: 23px;
+    line-height: 1.3;
   }
 }
