test and commands pages

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -15,6 +15,7 @@
 @import "modules/_settings";
 @import "modules/_brunch-work";
 @import "modules/_base";
+@import "modules/_commands-main";
 
 @import "modules/_footer";
 
