--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -45,7 +45,7 @@
   }
 }
 
-.s-header{
+.s-header, .br-header, .c-header{
   &__content{
     padding: 50px 0;
     h1{
@@ -56,14 +56,14 @@
     }
   }
 }
-.br-header{
-  &__content{
-    padding: 50px 0;
-    h1{
-      text-align: left;
-    }
-    p{
-      text-align: left;
-    }
-  }
-}
+// .br-header{
+//   &__content{
+//     padding: 50px 0;
+//     h1{
+//       text-align: left;
+//     }
+//     p{
+//       text-align: left;
+//     }
+//   }
+// }
