--- a/scss/global.scss
+++ b/scss/global.scss
@@ -16,6 +16,7 @@
 @import "modules/_brunch-work";
 @import "modules/_base";
 @import "modules/_commands-main";
+@import "modules/_quiz";
 
 @import "modules/_footer";
 
