--- a/scss/modules/_commands-main.scss
+++ b/scss/modules/_commands-main.scss
@@ -18,6 +18,12 @@
       }
     }
   }
+  #base-com{
+    padding: 20px 20px;
+  }
+  h2{
+    margin: 20px 0;
+  }
   section{
     border-top: 2px solid #c45238;
   }
@@ -26,7 +32,12 @@
     line-height: 1.3;
     text-decoration: underline;
   }
+  p{
+    line-height: 1.4;
+    margin: 10px 0;
+  }
   .code-wr{
+    font-family: 'Space Mono', monospace;
     padding: 15px 20px;
         border: 1px solid #000;
         background-color: #fff;
