--- a/scss/modules/_quiz.scss
+++ b/scss/modules/_quiz.scss
@@ -31,12 +31,13 @@
         }
     }
     #results{
+        &.active{
         margin-top: 30px;
         box-shadow: 0px 0px 33px 22px rgba(203,255,228,0.93);
         padding: 10px 20px;
         font-size: 18px;
         display: inline-block;
         background-color: rgba(203,255,228,0.93);
-        font-weight: 700;
+        font-weight: 700;} 
     }
 } 
